--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "debug-logger": "^0.4.1",
     "express": "^4.13.4",
     "jsonfile": "^2.2.3",
     "node-rest-client": "^1.8.0",
