--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "debug-logger": "^0.4.1",
+    "eventsource": "^0.2.0",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "jsonfile": "^2.2.3",
     "node-rest-client": "^1.8.0",
+    "openurl": "^1.1.1",
+    "passport": "^0.3.2",
+    "passport-nest": "^1.0.0",
     "superagent": "^1.8.0-beta.1"
   }
 }
