--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "openurl": "^1.1.1",
     "passport": "^0.3.2",
     "passport-nest": "^1.0.0",
-    "superagent": "^1.8.0-beta.1"
+    "superagent": "^1.8.0-beta.1",
+    "unofficial-nest-api": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^1.9.1"
